--- a/styles/global.css
+++ b/styles/global.css
@@ -125,7 +125,7 @@
   top:0;
   left: 0;
   height: 100%;
-  z-index:1;
+  z-index:10;
 }
 
 .sidebar-container{
